# shamgp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: COUPON_SYSTEM_SUMMARY.md  Dockerfile  JWT_FIX_SUMMARY.md  alembic.ini  check_all.sql  check_db.py  check_login_user.py  check_role.py  check_user_roles.py  db_check.py  pyproject.toml  pytest.ini  requirements.txt  run_server.ps1  smoke-register.json  tables_list.txt  test-cart.json  test-login.json  test-register.json  test_cart.ps1  test_cart.sh  test_login_issue.py
backend/alembic/: env.py
backend/alembic/versions/: 081a59424b88_add_role_permission_tables.py  718ff6cf4893_add_addresses_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  exceptions.py  security.py
backend/app/models/: __init__.py  address.py  banner.py  base.py  brand.py  browse_history.py  cart.py  category.py  coupon.py  favorite.py  file.py  inventory_record.py  log.py  menu.py  order.py  order_status_log.py  permission.py  product.py  product_image.py  product_sku.py  product_spu.py  recommend.py  role.py  shipping_rule.py  system_config.py  user.py  user_coupon.py
backend/app/schemas/: __init__.py  address.py  auth.py  banner.py  brand.py  cart.py  category.py  common.py  coupon.py  dashboard.py  file.py  inventory_record.py  (+12 more)
backend/scripts/: check_coupon.py  check_tables.py  check_tables2.py  create_addresses.py  init_db.py  init_dev_db.py  list_tables.py  list_tables2.py  seed_data.py  seed_rbac.py  seed_real_data.py
backend/tests/: conftest.py
(+245 files in other folders)
